--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -20,6 +20,12 @@ on:
         required: false
         type: string
         default: europe-west2
+      working-directory:
+        description: |
+          The working directory of where to execute the p2p run commands
+        required: false
+        type: string
+        default: .
     outputs:
       version:
         value: ${{ inputs.version }}
@@ -41,6 +47,7 @@ jobs:
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
       dry-run: ${{ inputs.dry-run }}
+      working-directory: ${{inputs.working-directory}}
 
   functional-test:
     needs: [build]
@@ -55,6 +62,7 @@ jobs:
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
       dry-run: ${{ inputs.dry-run }}
+      working-directory: ${{inputs.working-directory}}
 
 
   nft-test:
@@ -70,6 +78,7 @@ jobs:
       github_env: ${{ matrix.deploy_env }}
       version: ${{ inputs.version }}
       dry-run: ${{ inputs.dry-run }}
+      working-directory: ${{inputs.working-directory}}
 
   promote:
     name: promote
@@ -87,5 +96,6 @@ jobs:
       promotion-stage: extended-test
       version: ${{ inputs.version }}
       dry-run: ${{ inputs.dry-run }}
+      working-directory: ${{inputs.working-directory}}
 
 
