change default working directory

--- a/.github/workflows/p2p-workflow-fastfeedback.yaml
+++ b/.github/workflows/p2p-workflow-fastfeedback.yaml
@@ -23,7 +23,7 @@ on:
       working-directory:
         required: false
         type: string
-        default: .
+        default: '.'
     outputs:
       version:
         value: ${{ inputs.version }}
