--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -27,6 +27,10 @@ on:
         required: false
         type: string
         default: europe-west2
+      working-directory:
+        required: false
+        type: string
+        default: '.'
 
 
 jobs:
@@ -107,6 +111,7 @@ jobs:
 
       - name: Promote
         id: run-promotion
+        working-directory: ${{ inputs.working-directory }}
         env:
           SOURCE_AUTH_OVERRIDE: ${{ steps.auth-source.outputs.credentials_file_path }}
           SOURCE_ACCESS_TOKEN: ${{ steps.auth-source.outputs.access_token }}
