Add step to get the latest version from gcp artifact registry

--- a/.github/workflows/internal-ci.yaml
+++ b/.github/workflows/internal-ci.yaml
@@ -58,6 +58,7 @@ jobs:
         TEST_VARIABLE=value
     with:
       dry-run: true
+      image-name: p2p
       version: ${{ needs.test_version.outputs.version }}
 
   test_prod:
@@ -68,4 +69,5 @@ jobs:
         TEST_VARIABLE=value
     with:
       dry-run: true
+      image-name: p2p
       version: ${{ needs.test_version.outputs.version }}
