--- a/.github/workflows/p2p-get-latest-image.yaml
+++ b/.github/workflows/p2p-get-latest-image.yaml
@@ -102,6 +102,6 @@ jobs:
           DRY_RUN: ${{ inputs.dry-run }}
         working-directory: ${{ inputs.working-directory }}
         run: |
-            [ $DRY_RUN == true ] && VERSION=$(gcloud container images list-tags $(REGISTRY)/$(REGISTRY_PATH)/$(IMAGE_NAME) --limit=1 --format=json | jq -r '.[0].tags[0]') || VERSION="v0.0.0"
+            [ $DRY_RUN == false ] && VERSION=$(gcloud container images list-tags $(REGISTRY)/$(REGISTRY_PATH)/$(IMAGE_NAME) --limit=1 --format=json | jq -r '.[0].tags[0]') || VERSION="v0.0.0"
             echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
