--- a/.github/workflows/p2p-get-latest-image.yaml
+++ b/.github/workflows/p2p-get-latest-image.yaml
@@ -53,8 +53,7 @@ jobs:
           EOT
 
   get-latest-image:
-    name: get-latest-image-${{ inputs.registry-path }}
-    id: get-latest-image
+    name: get-latest-image
     runs-on: ubuntu-latest
     needs: [lookup]
     outputs:
