Adjust platform-execute-command to allow per-ref/env concurrency

--- a/.github/workflows/platform-execute-command.yaml
+++ b/.github/workflows/platform-execute-command.yaml
@@ -33,7 +33,7 @@ jobs:
   developer-platform:
     name: ${{ inputs.feature }}
     runs-on: ubuntu-latest
-    concurrency: ${{ inputs.environment }}
+    concurrency: ${{ inputs.environment }}-${{ github.ref }}
     environment: ${{ inputs.environment }}
 
     env:
