--- a/.github/workflows/p2p-workflow-extended-test.yaml
+++ b/.github/workflows/p2p-workflow-extended-test.yaml
@@ -33,6 +33,10 @@ on:
         required: false
         type: string
         default: 'extended-test'
+      version:
+        required: false
+        type: string
+        default: ""
       image-name:
         required: true
         type: string
@@ -85,6 +89,6 @@ jobs:
       source_matrix: ${{ inputs.source }}
       dest_github_env: ${{ matrix.deploy_env }}
       promotion-stage: prod
-      version: ${{ needs.get-latest-version.outputs.version }}
+      version: ${{ inputs.version != "" && inputs.version || needs.get-latest-version.outputs.version }}
       dry-run: ${{ inputs.dry-run }}
       working-directory: ${{ inputs.working-directory }}
