--- a/.github/workflows/internal-ci.yaml
+++ b/.github/workflows/internal-ci.yaml
@@ -59,7 +59,7 @@ jobs:
       dry-run: true
       main-branch: ${{ github.ref }}
       image-name: p2p
-      verion: '0.0.1'
+      version: '0.0.1'
 
   test_prod:
     uses: ./.github/workflows/p2p-workflow-prod.yaml
