--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -109,6 +109,29 @@ jobs:
           token_format: access_token
           access_token_lifetime: 600s
 
+      - name: Setup NumPy
+        id: setup-numpy
+        if: inputs.dry-run == false
+        shell: bash
+        # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
+        run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+
+      - name: Setup kubeconfig
+        id: setup-kubeconfig
+        if: inputs.dry-run == false
+        shell: bash
+        run: |
+          gcloud container clusters get-credentials --project $PROJECT_ID --zone $REGION --internal-ip ${{ env.DPLATFORM }}
+          kubectl config set clusters.gke_${{ env.PROJECT_ID }}_${{ inputs.region }}_${{ env.DPLATFORM }}.proxy-url http://localhost:57755
+
+      - name: Decode environment variables
+        run: |
+          for i in $env_vars; do
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=})
+            echo ::add-mask::${i#*=}
+            printf '%s\n' $i >> $GITHUB_ENV
+          done
+
       - name: Promote
         id: run-promotion
         working-directory: ${{ inputs.working-directory }}
