Add env var for cloudsdk

--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -119,6 +119,8 @@ jobs:
       - name: Setup kubeconfig
         id: setup-kubeconfig
         if: inputs.dry-run == false
+        env:
+          CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE: ${{ steps.auth-source.outputs.credentials_file_path }}
         shell: bash
         run: |
           gcloud container clusters get-credentials --project $PROJECT_ID --zone $REGION --internal-ip ${{ env.DPLATFORM }}
