--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -27,6 +27,10 @@ on:
         required: false
         type: string
         default: europe-west2
+      zone:
+        required: false
+        type: string
+        default: europe-west2-a
       working-directory:
         required: false
         type: string
